FILE(GLOB SOURCE_FILES *.cpp)
FILE(GLOB INCLUDE_FILES *.h)

ADD_EXECUTABLE(dint_test ${SOURCE_FILES} ${INCLUDE_FILES})

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/intVar ${PROJECT_SOURCE_DIR}/CDSlib ${PROJECT_SOURCE_DIR}/common)
TARGET_LINK_LIBRARIES(dint_test CDSlib common ${MATH_LIBS_TO_USE})
