## This whole directory exists just so I could define this extra preprocessor value.

ADD_DEFINITIONS(-DSimTK_SIMBODY_BUILDING_SHARED_LIBRARY)

ADD_LIBRARY(${SHARED_TARGET} SHARED ${SOURCE_FILES} ${SOURCE_INCLUDE_FILES} ${API_ABS_INCLUDE_FILES})

TARGET_LINK_LIBRARIES(${SHARED_TARGET} 
             debug ${SimTKMATH_SHARED_LIBRARY}_d optimized ${SimTKMATH_SHARED_LIBRARY}
             debug ${SimTKCPODES_SHARED_LIBRARY}_d optimized ${SimTKCPODES_SHARED_LIBRARY}
             debug ${SimTKCOMMON_SHARED_LIBRARY}_d optimized ${SimTKCOMMON_SHARED_LIBRARY}
             ${MATH_LIBS_TO_USE})

SET_TARGET_PROPERTIES(${SHARED_TARGET} PROPERTIES
	PROJECT_LABEL "Library - ${SHARED_TARGET}")

# install the library; on Windows both .lib and .dll go in the lib directory.

INSTALL(TARGETS ${SHARED_TARGET}
                 PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
                 LIBRARY DESTINATION ${SimTK_INSTALL_PREFIX}/core/lib${LIB64}
                 ARCHIVE DESTINATION ${SimTK_INSTALL_PREFIX}/core/lib${LIB64}
                 RUNTIME DESTINATION ${SimTK_INSTALL_PREFIX}/core/lib${LIB64}
)



